// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`margin: 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-bottom": {
      "setterCode": "setStyleMarginBottom(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "margin-left": {
      "setterCode": "setStyleMarginLeft(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "margin-right": {
      "setterCode": "setStyleMarginRight(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "margin-top": {
      "setterCode": "setStyleMarginTop(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
  },
}
`;

exports[`margin: 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: 1em: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-top",
        "important": undefined,
        "prop": "marginTop",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-top\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-right",
        "important": undefined,
        "prop": "marginRight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-right\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-bottom",
        "important": undefined,
        "prop": "marginBottom",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-bottom\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-left",
        "important": undefined,
        "prop": "marginLeft",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-left\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`margin: 1em: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-top",
        "important": undefined,
        "prop": "marginTop",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-top\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-right",
        "important": undefined,
        "prop": "marginRight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-right\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-bottom",
        "important": undefined,
        "prop": "marginBottom",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-bottom\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-left",
        "important": undefined,
        "prop": "marginLeft",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1em",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`1em\` is not supported for \`margin-left\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`margin: 5% 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-bottom": {
      "setterCode": "setStyleMarginBottom(5, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PCT)",
    },
    "margin-left": {
      "setterCode": "setStyleMarginLeft(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "margin-right": {
      "setterCode": "setStyleMarginRight(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "margin-top": {
      "setterCode": "setStyleMarginTop(5, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`margin: 5% 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: 10px 50px 20px 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-bottom": {
      "setterCode": "setStyleMarginBottom(20, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(20, UniCSSUnitType.PX)",
    },
    "margin-left": {
      "setterCode": "setStyleMarginLeft(0, UniCSSUnitType.NONE)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.NONE)",
    },
    "margin-right": {
      "setterCode": "setStyleMarginRight(50, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PX)",
    },
    "margin-top": {
      "setterCode": "setStyleMarginTop(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`margin: 10px 50px 20px 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: 10px 50px 20px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-bottom": {
      "setterCode": "setStyleMarginBottom(20, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(20, UniCSSUnitType.PX)",
    },
    "margin-left": {
      "setterCode": "setStyleMarginLeft(50, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PX)",
    },
    "margin-right": {
      "setterCode": "setStyleMarginRight(50, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PX)",
    },
    "margin-top": {
      "setterCode": "setStyleMarginTop(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`margin: 10px 50px 20px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-bottom": {
      "setterCode": "setStyleMarginBottom(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
    "margin-left": {
      "setterCode": "setStyleMarginLeft(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
    "margin-right": {
      "setterCode": "setStyleMarginRight(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
    "margin-top": {
      "setterCode": "setStyleMarginTop(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`margin: auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;
